[gd_scene load_steps=3 format=4 uid="uid://daqkvnnq4iooa"]

[ext_resource type="Script" uid="uid://cbkfrbegga4av" path="res://scripts/world_map.gd" id="1_world_map"]
[ext_resource type="TileSet" uid="uid://dqe48t8oelvp4" path="res://resources/world_tileset.tres" id="2_tileset"]

[node name="WorldMap" type="Node2D"]
script = ExtResource("1_world_map")

[node name="DirtBase" type="TileMapLayer" parent="."]
z_index = -8
tile_map_data = PackedByteArray("AADz//X/AAABAAEAAADz//T/AAABAAEAAAD0//T/AAABAAEAAAD0//P/AAABAAAAAAD1//P/AAABAAAAAAD2//P/AAABAAAAAAD2//T/AAABAAEAAAD1//X/AAABAAEAAAD0//X/AAABAAEAAAD1//T/AAABAAEAAAD2//X/AAABAAEAAAD3//T/AAABAAEAAAD3//X/AAABAAEAAAD2//b/AAABAAEAAAD1//b/AAABAAEAAAD3//b/AAABAAEAAAD0//b/AAABAAEAAAD3//f/AAABAAIAAAD4//f/AAABAAIAAAD5//f/AAACAAIAAAD4//b/AAABAAEAAADz//b/AAABAAEAAADy//b/AAAAAAEAAAD4//X/AAABAAEAAAD5//X/AAACAAEAAAD5//b/AAACAAEAAAD4//T/AAABAAEAAAD4//P/AAABAAAAAAD5//P/AAACAAAAAAD5//T/AAACAAEAAAD3//P/AAABAAAAAADz//P/AAABAAAAAADy//T/AAAAAAEAAADy//X/AAAAAAEAAADy//P/AAAAAAAAAADz//f/AAABAAIAAAD0//f/AAABAAIAAAD1//f/AAABAAIAAAD2//f/AAABAAIAAADy//f/AAAAAAIAAAA=")
tile_set = ExtResource("2_tileset")

[node name="TerrainLayer1" type="TileMapLayer" parent="."]
z_index = -7
tile_map_data = PackedByteArray("AADz//X/AQAAAAIAAAD0//X/AQACAAIAAAD0//T/AQACAAAAAADz//T/AQAAAAAAAAA=")
tile_set = ExtResource("2_tileset")

[node name="TerrainLayer2" type="TileMapLayer" parent="."]
z_index = -6
tile_set = ExtResource("2_tileset")

[node name="SnowLayer" type="TileMapLayer" parent="."]
z_index = -5
tile_set = ExtResource("2_tileset")

[node name="GrassLayer" type="TileMapLayer" parent="."]
z_index = -4
tile_set = ExtResource("2_tileset")

[node name="WallLayer1" type="TileMapLayer" parent="."]
z_index = -3
tile_set = ExtResource("2_tileset")

[node name="WallLayer2" type="TileMapLayer" parent="."]
z_index = -2
tile_set = ExtResource("2_tileset")

[node name="WallLayer3" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AADz//b/BQACAAMAAAD0//b/BQACAAMAAAD1//b/BQAJAAIAAAD2//b/BQAFAAIAAAD3//b/BQABAAMAAADz//f/BQABAAEAAAD0//f/BQACAAEAAAD1//f/BQAHAAQAAAD2//f/BQAIAAEAAAA=")
tile_set = ExtResource("2_tileset")
